--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-3">
             </div>
-            <div class="col-6" id="quoteArea">
+            <div class="col-6 text-primary text-center" id="quoteArea">
             </div>
             <div class="col-3" id="todoArea">
             </div>
@@ -33,7 +33,7 @@
     <footer class="container-fluid bg-transparent text-light">
         <div class="row text-center">
             <div class="col">
-                <p><small>Made with love by Codeworks</small></p>
+                <p class="text-dark"><small>Made with love by Codeworks</small></p>
             </div>
         </div>
     </footer>
