--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-3">
             </div>
-            <div class="col-6 text-primary text-center" id="quoteArea">
+            <div class="col-6 text-warning text-center" id="quoteArea">
             </div>
             <div class="col-3" id="todoArea">
             </div>
