--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
     <main class="container-fluid" id="bg-img">
         <div class="row">
-            <div class="offset-11 col-1" id="weatherArea">
+            <div class="offset-11 col-1" id="weatherArea" onclick="app.weatherController.toggleDeg()">
                 weather over here
             </div>
         </div>
         <div class="row">
-            <div class="col d-flex justify-content-center align-items-center" id="clockArea">
+            <div class="col d-flex justify-content-center" id="clockArea">
                 Clock Goes Here
             </div>
         </div>
         <div class="row">
             <div class="col-3">
             </div>
-            <div class="col-6 text-warning text-center" id="quoteArea">
+            <div class="col-6 text-primary text-center d-flex align-items-end" id="quoteArea">
             </div>
             <div class="col-3" id="todoArea">
             </div>
