--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Inspire</title>
 </head>
 
-<body>
+<body onload="startTime()">
     <main class="container-fluid" id="bg-img">
         <div class="row">
             <div class="offset-11 col-1" id="weatherArea" onclick="app.weatherController.toggleDeg()">
@@ -17,16 +17,16 @@
             </div>
         </div>
         <div class="row">
-            <div class="col d-flex justify-content-center" id="clockArea">
+            <div class="col d-flex justify-content-center m-auto" id="clockArea">
                 Clock Goes Here
             </div>
         </div>
         <div class="row">
             <div class="col-3">
             </div>
-            <div class="col-6 text-primary text-center d-flex align-items-end" id="quoteArea">
+            <div class="col-6 text-primary text-center d-flex m-auto" id="quoteArea">
             </div>
-            <div class="col-3" id="todoArea">
+            <div class="col-3 justify-content-end" id="todoArea">
             </div>
         </div>
     </main>
@@ -37,6 +37,23 @@
             </div>
         </div>
     </footer>
+    <script>
+        function startTime() {
+          var today = new Date();
+          var h = today.getHours();
+          var m = today.getMinutes();
+          var s = today.getSeconds();
+          m = checkTime(m);
+          s = checkTime(s);
+          document.getElementById('clockArea').innerHTML =
+          h + ":" + m + ":" + s;
+          var t = setTimeout(startTime, 500);
+        }
+        function checkTime(i) {
+          if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+          return i;
+        }
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
     <script src="app/main.js" type="module"></script>
 </body>
