--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                 <div class="row">
                     <div class="col p-0 mb-0 text-center text-primary bg-tp">
                         <div class="card-header" id="cardHeader">
-                            <h3 class=""><u>To Do:</u></h3>
+                            <h3 class="">To Do:</h3>
                         </div>
                         <form class="mt-1" onsubmit="app.todoController.addTodo(event, '${this.id}')">
                             <div class="form-group">
                                 <ul class="list-group list-group-flush"  id="todoArea">
                         
                                 </ul>
-                            <input type="text" class="todoForm" id="todoBody" placeholder="Enter a task...">
+                            <input type="text" class="todoForm mt-3" id="todoBody" placeholder="Enter a task...">
                             </div>
-                        <button class="btn btn-primary mb-2 todoButton" type="submit">Add Task</button>
+                        <button class="btn btn-primary mb-2 todoButton" type="submit">Add</button>
                         </form>
                     </div>
                 </div>
