task counter on reload

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col p-0 mb-0 text-center text-primary bg-tp">
                         <div class="card-header" id="cardHeader">
-                            <h4 class=""><u>To Do:</u></h4>
+                            <h4 class="" id="todoLeft"><u>To Do:</u></h4>
                         </div>
                         <form class="mt-1" onsubmit="app.todoController.addTodo(event, '${this.id}')">
                             <div class="form-group">
