--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
             </div>
             <div class="col-3 d-flex flex-column">
                 <div class="row">
-                    <div class="col p-0 mb-0 text-center text-primary bg-tp">
+                    <div class="col p-0 mb-0 text-center text-light bg-tp">
                         <div class="card-header" id="cardHeader">
-                            <h4 class="" id="todoLeft"><u>To Do:</u></h4>
+                            <h4 class="" id="todoLeft">
+                            </h4>
                         </div>
                         <form class="mt-1" onsubmit="app.todoController.addTodo(event, '${this.id}')">
                             <div class="form-group">
