--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col d-flex justify-content-center clockRow" id="clockArea">
+            <div class="col d-flex justify-content-center textShadow" id="clockArea">
                 <!-- clock goes here -->
             </div>
         </div>
